# cassava-disease-prediction

./: .gitignore  Dockerfile  README.md  lambda_function.py  publish_to_ecr.sh  pyproject.toml  test_lambda_model.py  test_model.ipynb  test_model.py  train_save_model.ipynb  train_save_model.py
artefacts/models/onnx/: model.onnx
